<resources>
    <string name="app_name">HW01WeatherApp</string>
    <string name="action_settings">Settings</string>
    <string name="tempField">Temperature: </string>
    <string name="locationField">Enter a location</string>
    <string name="humidityField">Humidity: </string>
    <string name="windSpeedField">Wind Speed: </string>
    <string name="precipitationField">Precipitation: </string>
    <string name="searchButton">Search</string>
</resources>
